# papertrail

./: .gitignore  README.md  pyproject.toml  run.bat
papertrail/: __init__.py
papertrail/adapters/: knowledge.py  scan.py  search.py
papertrail/api/: documents.py  health.py  knowledge.py  scan.py  search.py
papertrail/core/: config.py  database.py  models.py
tests/: test_api.py
