[project]
name = "papertrail"
version = "0.2.0"
description = "Local-first document intelligence: upload, extract, search, and analyze documents."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]
plans = [
  "pymupdf>=1.24",
  "pillow>=10.0",
]
ocr = [
  "pytesseract>=0.3.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[project.urls]
Source = "https://github.com/Jdrexx/papertrail"
